# mastodon

./: .gitlab-ci.yml  AUTHORS.md  CHANGELOG-BABKA.md  CHANGELOG.md  Dockerfile  Gemfile  HACKING-BABKA.md  README.md  docker-compose.yml
.github/workflows/: build-image.yml
app/controllers/: application_controller.rb
app/controllers/auth/: omniauth_callbacks_controller.rb  sessions_controller.rb
app/controllers/concerns/: web_app_controller_concern.rb
app/controllers/settings/preferences/: base_controller.rb
app/helpers/: application_helper.rb  languages_helper.rb
app/lib/: translation_service.rb
app/models/: follow_request.rb  webhook.rb
app/presenters/: initial_state_presenter.rb
app/serializers/: initial_state_serializer.rb
app/services/: follow_service.rb  translate_status_service.rb
app/views/layouts/: application.html.haml
babka/: HACKING.md  README.md  pyproject.toml
babka/setup/: .env.sso  README.md  docker-compose.yml  keycloak.docker-compose.yml  nginx.conf
babka/tests/: fixtures.py  helpers.py  test_login.py  test_logout.py  test_register.py
config/: application.rb  routes.rb
config/initializers/: 3_omniauth.rb  content_security_policy.rb  omniauth.rb  rack_attack.rb
config/locales/: activerecord.lad.yml  devise.lad.yml  doorkeeper.lad.yml  en.yml  lad.yml  simple_form.lad.yml
config/locales-glitch/: lad.yml  simple_form.lad.yml
lib/mastodon/: redis_config.rb  version.rb
lib/tasks/: mastodon.rake
spec/presenters/: instance_presenter_spec.rb
spec/services/: translate_status_service_spec.rb
(+14 files in other folders)
